// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruevas en el <GifGrid /> Debe de mostrar items cuando se cargan imagenes 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.png"
    />
    <GifGridItem
      id="123"
      key="123"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.png"
    />
  </div>
</Fragment>
`;

exports[`Pruevas en el <GifGrid /> Debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;
